UPDATE: fixed some UI conflicts and whitespace

--- a/Lyra_UI/css/Lyra_UI.css
+++ b/Lyra_UI/css/Lyra_UI.css
@@ -5684,15 +5684,6 @@ html:has(.nav-pane:not(.hidden)) {
         max-height: 600px;
     }
 
-    .section-header.large {
-        margin: 2em 4px 10px 4px;
-    }
-
-    .section-header.large .section-title {
-        font-size: 4.5rem;
-        margin: 0px 8px 10px 8px;
-    }
-
     .flex-grids {
         margin: 0 2em;
     }
@@ -5778,7 +5769,8 @@ html:has(.nav-pane:not(.hidden)) {
     }
 
     .list {
-        padding: 20px 0px;
+        margin: 0px;
+        padding: 0 0px;
     }
 
     .list-content {
@@ -5787,8 +5779,6 @@ html:has(.nav-pane:not(.hidden)) {
 
     .list-item-content,
     .list-item-header {
-        width: 100%;
-        max-width: 100%;
         padding: 0px 0.2em;
     }
 
@@ -6169,15 +6159,15 @@ html:has(.nav-pane:not(.hidden)) {
         margin: 20px 10px;
     }
 
-    .badge-container.compact .badge {
+    .badge-container.compact .badge-old {
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
     }
 
-    .badge span.gray {
+    .badge-old span.gray {
         line-height: normal;
-        font-size: 15px;
+        font-size: 14px;
         text-align: left;
         margin: 10px 0;
     }
